feat: introduce new IAM commands and queries with updated ID types